--- a/desafio-go/Dockerfile.prod
+++ b/desafio-go/Dockerfile.prod
@@ -13,3 +13,9 @@ RUN go get -d -v
 # Build the binary
 RUN go build -o /go/bin/fullcycle
 
+# Step 2 - Run binary
+FROM scratch
+
+COPY --from=builder /go/bin/fullcycle /go/bin/fullcycle
+
+CMD ["/go/bin/fullcycle"]
